--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
 #
+
 title : TOP Health Sprint
 author :
   name : Irina Muchnik
@@ -55,6 +56,14 @@ people:
 
 
 
+
+
+- name: Davar Ardalan
+  pic: 4
+  position: Data Storyteller, PIF, GSA
+  social:
+    - title: twitter
+      url: https://twitter.com/@idavar
 
 
 
