Adding 'former fed' label to Ardalan

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ people:
     - title: twitter
       url: https://twitter.com/GilAlterov
 
-  - name: Davar Ardalan
+  - name: Davar Ardalan *
     pic: 4
     position: Data Storyteller, PIF, GSA
     social:
